The RawProcessingFilter shall call cancelFilter() from its destructor as any filter shall do which accesses member fields (destroyed in the destructor) in its thread. The crash happens when the thread is terminated only in the base class destructor, but the thread is running until then and operating on the destroyed members

BUG: 278038